Tutorial 2, speckle restraint created

--- a/igm_tutorial/tutorial_1.ipynb
+++ b/igm_tutorial/tutorial_1.ipynb
@@ -9,8 +9,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(numexpr.utils) 2023-03-27 11:19:11,003 [INFO] Note: NumExpr detected 12 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 8.\n",
-      "(numexpr.utils) 2023-03-27 11:19:11,006 [INFO] NumExpr defaulting to 8 threads.\n"
+      "(numexpr.utils) 2023-04-12 16:56:54,709 [INFO] Note: NumExpr detected 12 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 8.\n",
+      "(numexpr.utils) 2023-04-12 16:56:54,710 [INFO] NumExpr defaulting to 8 threads.\n"
      ]
     }
    ],
@@ -25,6 +25,23 @@
     "\n",
     "from igm.model import Model, Particle\n",
     "from igm.restraints import Polymer, Envelope, Steric, intraHiC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confirm that the package is installed correctly.\n"
+     ]
+    }
+   ],
+   "source": [
+    "igm.utils.simple_print()"
    ]
   },
   {
@@ -107,6 +124,8 @@
    "source": [
     "# add the speckles as particles for each model of the HSS file\n",
     "\n",
+    "# In IGM, there isn't a data structure that contains all the models.\n",
+    "# This is because the models are passed to LAMMPS individually.\n",
     "models = list()\n",
     "\n",
     "# loop over all the models\n",
