hss changed into hsstest for .gitignore bypass

--- a/igm_tutorial/tutorial_1.ipynb
+++ b/igm_tutorial/tutorial_1.ipynb
@@ -9,8 +9,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(numexpr.utils) 2023-04-12 16:56:54,709 [INFO] Note: NumExpr detected 12 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 8.\n",
-      "(numexpr.utils) 2023-04-12 16:56:54,710 [INFO] NumExpr defaulting to 8 threads.\n"
+      "(numexpr.utils) 2023-04-12 17:29:36,922 [INFO] Note: NumExpr detected 12 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 8.\n",
+      "(numexpr.utils) 2023-04-12 17:29:36,923 [INFO] NumExpr defaulting to 8 threads.\n"
      ]
     }
    ],
@@ -29,24 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Confirm that the package is installed correctly.\n"
-     ]
-    }
-   ],
-   "source": [
-    "igm.utils.simple_print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +42,7 @@
     }
    ],
    "source": [
-    "hssfilename = 'igm-model_mcrb_2.5MB.hss'\n",
+    "hssfilename = 'igm-model_mcrb_2.5MB.hsstest'\n",
     "\n",
     "with HssFile(hssfilename, 'r') as hss:\n",
     "\n",
