Tutorial 2nd week

--- a/igm_tutorial/tutorial_1.ipynb
+++ b/igm_tutorial/tutorial_1.ipynb
@@ -2,34 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "(numexpr.utils) 2023-04-12 17:29:36,922 [INFO] Note: NumExpr detected 12 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 8.\n",
-      "(numexpr.utils) 2023-04-12 17:29:36,923 [INFO] NumExpr defaulting to 8 threads.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
     "import igm\n",
     "\n",
+    "\n",
     "import h5py\n",
+    "\n",
+    "import tqdm\n",
     "\n",
     "from alabtools import HssFile\n",
     "\n",
     "from igm.model import Model, Particle\n",
-    "from igm.restraints import Polymer, Envelope, Steric, intraHiC"
+    "from igm.restraints import Polymer, Envelope, Steric, intraHiC, SpeckleVolume"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -83,8 +77,7 @@
      "text": [
       "[79 73 65 63 61 60 59 52 50 53 49 49 49 50 42 40 38 37 25 69 37 79 73 65\n",
       " 63 61 60 59 52 50 53 49 49 49 50 42 40 38 37 25]\n",
-      "[ 0  0  0 ... 39 39 39]\n",
-      "(2094, 100, 3)\n"
+      "[ 0  0  0 ... 39 39 39]\n"
      ]
     }
    ],
@@ -101,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +145,7 @@
        "[3050.0, 2350.0, 2350.0]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,9 +160,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Steric\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 2997.90it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize the restraints list\n",
     "all_restraints = []\n",
@@ -180,9 +188,266 @@
     "\n",
     "print(ex)   # this is a igm.restraint.restraint class/object\n",
     "\n",
-    "### CONFUSED ABOUT HOW _apply_model AND _apply METHODS (OF CLASS RESTRAINT) WORK\n",
-    "model.addRestraint(ex)      # add restraint to the model: which means, forces are actually added involving the particles\n",
-    "all_restraints.append(ex)    # keep track of restraints also"
+    "for model in tqdm.tqdm(models):\n",
+    "    model.addRestraint(ex, override=True)  # add restraint to the model: which means, forces are actually added involving the particles\n",
+    "    all_restraints.append(ex)  # keep track of restraints also"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 2421.56it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for struct in tqdm.tqdm(range(hss.nstruct)):\n",
+    "    model = models[struct]\n",
+    "    speckle = speckles[struct]\n",
+    "    spv_k = 1.0  # to be written in the config file\n",
+    "    spv = SpeckleVolume(speckle, spv_k)\n",
+    "    model.addRestraint(spv)\n",
+    "    all_restraints.append(spv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(all_restraints))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "Steric\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n",
+      "SpeckleVolume\n"
+     ]
+    }
+   ],
+   "source": [
+    "for restraint in all_restraints:\n",
+    "    print(restraint)"
    ]
   },
   {
@@ -190,12 +455,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We realized that the steric restraint only works with NORMAL particles.\n",
+    "For next week:\n",
     "\n",
-    "This means that we will have to code a new type of restraint, specific for speckles.\n",
-    "\n",
-    "The idea would be to mark the speckles particles with chainID = 'speckles', and then in the restrain function filter out all the particles that don't have this chainID type."
+    "- Change the configuration file to include the new Speckle Restraint\n",
+    "- Change the Nucleolus Restraint name into a generic Spherical one\n",
+    "- Run IGM\n",
+    "- Lear how to check the violations, and how to check that the restraint is working"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
